--- a/第一周大作业项目计划.md
+++ b/第一周大作业项目计划.md
@@ -6,12 +6,19 @@
 - git和github的学习和使用
 - 微信小程序开发流程学习
 - github现有开源代码查询
+
+> 准备工作于周二课前完成
   
 ### 开发工作
+#### P0
 1. 以微信小程序的抽签小程序为模板制作成固定分组小程序
    - 对小程序开发软件提供的模板进行解读并学习
    - 依据单次抽签功能开分组功能，基本思路为，抽签后将中签着移出并以此放入预定的组号中
    - 学习并修改UI使之与代码功能相匹配
+
+> P0阶段开发于周三上课前完成
+
+#### P1
 2. 参考github开源代码，开发自定义分组功能
    - 定义分组即可以自己设计组数和每组的人数
 3. 参考github开源代码，开发组员预设分组功能
@@ -20,6 +27,7 @@
 >   - 可以给成员预设标签，在此基础上进行预设分组操作。例如标签为x的同学分到一组
 
 > ***第4条为附加项目，尽量完成***
-
+> P1阶段开发于周五上课前完成
 ### 测试工作
-- 每一阶段以本班级成员为案例进行分组测试
+- 周三编写P0产品的测试思维导图
+- 周五编写P1产品的测试思维导图
