--- a/第一周大作业项目计划.md
+++ b/第一周大作业项目计划.md
@@ -11,7 +11,7 @@
   
 ### 开发工作
 #### P0
-1. 以微信小程序的抽签小程序为模板制作成固定分组小程序
+1. 以微信小程序的抽签点名答题小程序为模板制作成固定分组小程序
    - 对小程序开发软件提供的模板进行解读并学习
    - 依据单次抽签功能开分组功能，基本思路为，抽签后将中签着移出并以此放入预定的组号中
    - 学习并修改UI使之与代码功能相匹配
